<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFF"
    tools:context=".QuizSelectDisplayFragment">


    <TextView
        android:id="@+id/jenerations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenerationtitle"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Dai1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:text="@string/Dai1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jenerations" />

    <Button
        android:id="@+id/Dai2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/Dai2"
        app:layout_constraintStart_toEndOf="@+id/Dai1"
        app:layout_constraintTop_toTopOf="@+id/Dai1" />

    <Button
        android:id="@+id/Dai3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/Dai3"
        app:layout_constraintStart_toEndOf="@+id/Dai2"
        app:layout_constraintTop_toTopOf="@+id/Dai2" />

    <Button
        android:id="@+id/Dai4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/Dai4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dai1" />

    <Button
        android:id="@+id/Dai5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/Dai5"
        app:layout_constraintStart_toEndOf="@+id/Dai4"
        app:layout_constraintTop_toTopOf="@+id/Dai4" />

    <Button
        android:id="@+id/Dai6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/Dai6"
        app:layout_constraintStart_toEndOf="@+id/Dai5"
        app:layout_constraintTop_toTopOf="@+id/Dai5" />

    <Button
        android:id="@+id/Dai7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/Dai7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dai4" />

    <Button
        android:id="@+id/Dai8"
        android:layout_width="95dp"
        android:layout_height="53dp"
        android:layout_marginStart="50dp"
        android:text="@string/Dai8"
        app:layout_constraintStart_toEndOf="@+id/Dai7"
        app:layout_constraintTop_toTopOf="@+id/Dai7" />

</androidx.constraintlayout.widget.ConstraintLayout>